adição dos nomes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <!--Nesta observação vocês devem colocar os nomes dos alunos que ajudaram na atividade.
 Um aluno por linha e coloque o nome completo, o respectiv número e a turma.
-Nome:                                       nº:         Turma:              
-Nome:                                       nº:         Turma:              
-Nome:                                       nº:         Turma:              
-Nome:                                       nº:         Turma:              
-Nome:                                       nº:         Turma:              
-Nome:                                       nº:         Turma:              
-Nome:                                       nº:         Turma:              -->
+Nome:Gabrel a                                     nº:         Turma:              
+Nome:Ingrid                                     nº: 8     Turma:  3 A            
+Nome:Klaive                                     nº:  15                 
+Nome: Rafeal                                    nº:  21              
+Nome:Ricardo                                    nº:  29                
+Nome:                                       nº:      31        
+                                      nº:                       -->
 <html lang="pt-BR">
     <head>
         <title>Primos V1 while</title>        
